--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="data/lib/asm-4.1.jar"/>
+	<classpathentry kind="lib" path="data/lib/asm-4.1.jar" sourcepath="data/lib/asm-4.1-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
